@@ -49,11 +49,13 @@
 #define HS_CTB_RESET 48
 #define HS_CTB_AUTOHIDE 49
 #define HS_CTB_SHIFT_TYPE 50
-#define HS_CTB_INVERSE 51
-#define HS_CTB_ALPHA_DN 52
-#define HS_CTB_ALPHA_UP 53
-#define HS_CTB_LDFILE 54
-#define HS_CTB_RUNOPTS 55
+#define HS_CTB_ALPHA_DN 51
+#define HS_CTB_ALPHA_UP 52
+#define HS_CTB_INVERSE 53
+#define HS_CTB_SSTATE_SAVE 54
+#define HS_CTB_SSTATE_LOAD 55
+#define HS_CTB_LDFILE 56
+#define HS_CTB_RUNOPTS 57
 #define HS_RUNOPTS0_RUNOPTS0 61
 #define HS_RUNOPTS0_ZX80 62
 #define HS_RUNOPTS0_ZX81 63
