@@ -1,3 +1,6 @@
+2011-01-27 Thunor <thunorsif_at_hotmail.com>
+* Added save state and load state icons to the control bar.
+
 2011-01-26 Thunor <thunorsif_at_hotmail.com>
 * Added a save state system (F4/F5) although awaiting integration into
   the control bar.
